<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Audio Player</string>
    <string name="title_Songs">Songs</string>
    <string name="title_Albums">Albums</string>
    <string name="title_Artist">Artists</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_audio_vieiw">AudioVieiw</string>
    <string name="Previous">Previous</string>
    <string name="Play">Play</string>
    <string name="Next">Next</string>
    <string name="artist">Artist</string>
    <string name="title">Title</string>
    <string name="title_activity_file_explore">File Explore</string>
    <string name="emptylist">The List is Empty</string>
    <string name="title_activity_album">Album</string>
    <string name="cover_art">Cover art</string>
    <string name="title_activity_search">Search</string>
    <string name="search_hint">Search hint</string>
    <string name="home">Home</string>
    <string name="sd_card">SD Card</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="up">Up</string>
    <string name="action_rescan">Rescan Library</string>
    <string name="title_activity_artist">ArtistActivity</string>
    <string name="repeat">Repeat</string>
    <string name="shuffle">Shuffle</string>

</resources>
