<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.reindahl.audioplayer.player.AudioView" >

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/Artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist" />

    <ImageView
        android:id="@+id/CoverArtwork"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:contentDescription="@string/cover_art"
        android:scaleType="fitCenter"
        android:src="@drawable/squares" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/currentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:text="Small"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:ignore="HardcodedText" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:text="Small"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

         <ImageButton
             android:id="@+id/Repeat"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/button"
             android:contentDescription="@string/repeat"
             android:onClick="repeat"
             android:src="@drawable/ic_action_repeat" />
        
        <ImageButton
            android:id="@+id/Previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:contentDescription="@string/Previous"
            android:onClick="previous"
            android:src="@drawable/ic_action_previous" />

        <ImageButton
            android:id="@+id/PlayPause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:contentDescription="@string/Play"
            android:onClick="play_pause"
            android:src="@drawable/ic_action_pause" />

        <ImageButton
            android:id="@+id/Next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:contentDescription="@string/Next"
            android:onClick="next"
            android:src="@drawable/ic_action_next" />

        <ImageButton
            android:id="@+id/Shuffle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:contentDescription="@string/shuffle"
            android:onClick="shuffle"
            android:src="@drawable/ic_action_shuffle" />

    </LinearLayout>

</LinearLayout>