<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.reindahl.audioplayer.fileExplore.FileExploreActivity" >

    <TextView
        android:id="@+id/Path"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="Path"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/exploreControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <ImageButton
            android:id="@+id/Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="home"
            android:src="@drawable/ic_menu_home" 
            android:contentDescription="@string/home"/>

        <ImageButton
            android:id="@+id/SDCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="sdcard"
            android:src="@drawable/ic_action_sd_storage" 
            android:contentDescription="@string/sd_card"/>

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_action_back" />

        <ImageButton
            android:id="@+id/up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/up"
            android:onClick="up"
            android:src="@drawable/ic_action_collapse" />

        <ImageButton
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/forward"
            android:src="@drawable/ic_action_forward" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollFiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/FileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider"
            android:dividerPadding="3dp"
            android:orientation="vertical"
            android:showDividers="middle" >

        </LinearLayout>
    </ScrollView>

</LinearLayout>
